# zenyth

./: .codacy.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sonarcloud.properties  CLAUDE.md  README.md  codecov.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  quality-gate.yml  readme.md  semgrep.yml  sonarcloud.yml
agent/rules/: AGENT_GUIDE.md  SOLID_PRINCIPLES.md  capabilities.md  communication.md  context-portal.md  rules.md  test-driven-development.md
agent/workflow/: init-session.md  refresh-session.md  research-tasks.md
docs/: balancing-semantic-clarity.md  challenging-rules-reference-guide.md  claude-wrapper-enhancements.md  project_implementation_plan.md  sonarcloud-configuration.md  structured-validation.md  try003-exception-handling-research.md
docs/official/developer/: ai-sdk-custom-providers.md  claude-code-cli-usage.md  claude-code-js.md  claude-code-troubleshooting.md
examples/ai-sdk-POC/: 1_experiment_methodology.md  2_test_results.md  3_experiment_summary.md  4_next_steps_analysis.md  server.js
scripts/: check_atomicity.py  check_idempotency.py  split_tests.py  validate_solid_principles.py  validate_sparc_configs.py
sparc_config/phases/: phase_specification.py
src/zenyth/: __init__.py  models.py
src/zenyth/core/: exceptions.py  interfaces.py  types.py  validation.py
src/zenyth/llm/: __init__.py  http_provider.py
src/zenyth/mocks/: __init__.py  llm_provider.py
src/zenyth/orchestration/: __init__.py  orchestrator.py  registry.py
src/zenyth/phases/: __init__.py  architecture.py  base.py  pseudocode.py  specification.py
tests/fixtures/: orchestration_mocks.py
tests/unit/: test_architecture_handler.py  test_core_interfaces.py  test_core_types.py  test_http_llm_provider.py  test_integration_orchestrator.py  test_interfaces.py  test_llm_interface.py  test_mocks.py  test_orchestrator.py  test_phase_registry.py  test_pseudocode_handler.py  test_specification_handler.py  test_validation.py  test_workflow_result.py
tests/unit/core/: test_interfaces.py
tests/unit/core/interfaces/: test_dependency_inversion_enablement.py  test_istate_manager_full_interface.py  test_istate_manager_load_session_signature.py  test_istate_manager_protocol_exists.py  test_istate_manager_runtime_checking.py  test_istate_manager_save_session_signature.py  test_itool_registry_get_for_phase_signature.py  test_itool_registry_protocol_exists.py  test_itool_registry_runtime_checking.py  test_llm_interface_has_required_generation_methods.py  test_llm_interface_has_session_management_methods.py  test_llm_interface_protocol_is_satisfied.py  test_protocol_separation_of_concerns.py
tests/unit/core/types/: test_phase_result_accepts_artifacts_field.py  test_phase_result_accepts_phase_name_field.py  test_phase_result_defaults_metadata_to_empty_dict.py  test_phase_result_defaults_next_phase_to_none.py  test_phase_result_detects_inequality.py  test_phase_result_equality.py  test_phase_result_immutable.py  test_phase_result_optional_fields.py  test_phase_result_prevents_field_modification.py  test_phase_result_provides_string_representation.py  test_phase_result_stores_metadata_when_provided.py  test_phase_result_stores_metadata_when_provided_updated.py  test_phase_result_str_representation.py  test_phase_result_string_contains_phase_name.py  test_phase_result_supports_equality_comparison.py  test_phase_result_with_artifacts.py  test_phase_result_with_metadata_detailed.py  test_session_context_accepts_session_id_field.py  test_session_context_accepts_task_field.py  test_session_context_defaults_artifacts_to_empty_dict.py  test_session_context_defaults_metadata_to_empty_dict.py  test_session_context_detects_inequality.py  test_session_context_equality.py  test_session_context_immutable.py  test_session_context_initialization.py  test_session_context_optional_fields.py  test_session_context_prevents_field_modification.py  test_session_context_stores_artifacts_when_provided.py  test_session_context_stores_metadata_when_provided.py  test_session_context_supports_equality_comparison.py  test_session_context_with_artifacts.py  test_session_context_with_metadata.py
tests/unit/core/validation/: test_complete_validation_workflow_success.py  test_complete_validation_workflow_with_errors.py  test_error_code_enum_extensibility.py  test_error_code_enum_has_required_values.py  test_multiple_field_validation_workflow.py  test_validate_max_length_uses_actual_length_not_trimmed.py  test_validate_max_length_with_long_string.py  test_validate_max_length_with_valid_string.py  test_validate_min_length_with_short_string.py  test_validate_min_length_with_trimmed_string.py  test_validate_min_length_with_valid_string.py  test_validate_not_empty_with_empty_string.py  test_validate_not_empty_with_valid_string.py  test_validate_not_empty_with_whitespace_only.py  test_validate_required_with_none_value.py  test_validate_required_with_valid_value.py  test_validate_required_with_various_valid_types.py  test_validation_error_context_preservation.py  test_validation_error_creation_with_context.py  test_validation_error_creation_with_required_fields.py  test_validation_error_mutability.py  test_validation_framework_extensibility.py  test_validation_result_add_error_with_context.py  test_validation_result_add_error_with_custom_message.py  test_validation_result_add_error_with_default_message.py  test_validation_result_initialization.py  test_validation_result_is_valid_with_errors.py  test_validation_result_is_valid_with_no_errors.py  test_validation_result_multiple_errors.py  (+5 more)
tests/unit/llm/: test_llm_interface.py
tests/unit/mocks/: test_mock_llm_accepts_kwargs.py  test_mock_llm_cycles_through_responses.py  test_mock_llm_generate_returns_configured_response.py  test_mock_llm_implements_interface.py  test_mock_llm_provider_exists.py  test_mock_llm_tracks_call_count.py  test_mocks.py
tests/unit/orchestration/: test_integration_orchestrator.py  test_orchestrator.py  test_registry.py
tests/unit/phases/: test_architecture_handler.py  test_base.py
(+122 files in other folders)
